# TypeWave

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  apps  config  docs  models  pyproject.toml  runtime  scripts  tests
apps/desktop/voice_coding_app/: helper_service.py  service.py
apps/desktop/voice_coding_app/backend/: __init__.py  audio.py  audio_types.py  config.py  controller.py  hotkeys.py  injector.py  paths.py  text_processing.py  transcriber.py
apps/macos-native/VoiceCodingNative/: AppCoordinator.swift  AppIcon.icns  Info.plist  VoiceCodingNativeApp.swift
apps/macos-native/VoiceCodingNative.xcodeproj/: project.pbxproj
apps/macos-native/VoiceCodingNative/Models/: AppRuntimeState.swift  AppSettings.swift
apps/macos-native/VoiceCodingNative/Services/: AudioCaptureService.swift  FocusedInputAnchorResolver.swift  HelperProcessManager.swift  HotkeyMonitor.swift  PermissionCoordinator.swift  RecordingHUDController.swift  SettingsStore.swift  TargetAppTracker.swift  TextInsertionService.swift  WorkspacePaths.swift
apps/macos-native/VoiceCodingNative/Views/: MenuBarContentView.swift  RecordingHUDView.swift  SettingsView.swift
config/: app.yaml  hotwords.txt
docs/: GITHUB_PUBLISHING.md  OPEN_SOURCE.md
docs/superpowers/specs/: 2026-03-14-option-toggle-overlay-design.md
models/SenseVoiceSmall/: .gitattributes
scripts/: bootstrap.sh  build_macos.sh  build_macos_native.sh
tests/: test_config.py  test_hotkeys.py  test_service.py
